css/style.css
/* ========================================= */
/* ------------- Global styling */
/* ========================================= */

body {
    max-width: 60em;
    margin: auto;
    background-color: hsl(40, 50%, 60%);
    justify-content: center;
    display: flex;
    flex-direction: column;
}

main {
    padding-left: 10px;
    padding-right: 10px;
    background-color: hsl(40, 100%, 85%);
}

/**/
/**/
/* ========================================= */
/* ------ header/main-content/footer styling */
/* ========================================= */

header,
footer {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

#section-one,
#section-two {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    border-top: solid 1px hsl(40, 50%, 60%);
    border-bottom: solid 1px hsl(40, 50%, 60%);
}

#section-one br {
    display: block;
    content: ""; /* to clear default height */
    margin-top: 1em;
}

#section-one img {
    padding: 0.8em;
    max-width: 25em;
}

#section-two h2 {
    display: flex;
    justify-content: center;
}

#section-two div {
    flex-basis: 35%;
}

#section-two div:last-child {
    flex-basis: 65%;
}

#section-two li {
    list-style: square;
    margin-bottom: 0.4em;
}

/* changes flex to column when width gets 
    smaller than 800px*/
@media screen and (max-width: 800px) {

    #section-one,
    #section-two {
        flex-direction: column;
    }

    /* centers image in column layout */
    #section-one img {
        margin-left: auto;
        margin-right: auto;
    }
}

